# TEN-Agent

./: .gitignore  BUILD.gn  README.md  docker-compose.yml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ai_agents.yaml  build_docker_for_ai_agents.yml  claude_code_review.yml  coverage.yml  from_scratch.yml  linux_arm64.yml  linux_ubuntu2204.yml  mac_arm64.yml  mac_x64.yml  manual_publish_extension.yml  manual_test_asr_guarder.yml  tman_full_linux_arm64.yml  tman_full_linux_x64.yml  tman_full_mac_arm64.yml  tman_full_mac_x64.yml  tman_full_win_x64.yml  trigger_sync_remote_docs.yml  update_homebrew.yml  update_winget.yml  win.yml
agents/examples/default/: property.json
ai/: AI_working_with_ten.md  AI_working_with_ten_compact.md
ai_agents/: .env.example  Dockerfile  docker-compose.yml  pyrightconfig.json
ai_agents/agents/: .gitignore  manifest.json
ai_agents/server/internal/: config.go  http_server.go  worker.go
core/src/ten_manager/src/: lib.rs  (+1 more)
core/src/ten_runtime/: manifest.json
core/src/ten_runtime/binding/python/native/: BUILD.gn
core/src/ten_runtime/binding/python/native/addon/: addon.c
core/src/ten_runtime/binding/python/native/msg/: msg.c
core/src/ten_runtime/binding/python/native/ten_env/: ten_env_log.c  ten_env_on_create_instance_done.c
core/src/ten_runtime/binding/python/native/test/env_tester/: env_tester_log.c
docs/: README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md
docs/development/: how_to_develop_with_ext.cn.md  how_to_develop_with_ext.md
docs/getting-started/: quick-start.cn.md  quick-start.md
playground/: package-lock.json
playground/src/app/: global.css  layout.tsx  page.tsx
server/internal/: config.go  http_server.go
tests/local_registry/: BUILD.gn
tests/local_registry/app/: BUILD.gn
tests/ten_runtime/integration/: pytest.ini
tests/ten_runtime/integration/cpp/: BUILD.gn
tests/ten_runtime/integration/cpp/check_start_graph/check_start_graph_app/: manifest.json
tests/ten_runtime/integration/cpp/check_start_graph/check_start_graph_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_basic/ffmpeg_basic_app/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_bypass/ffmpeg_bypass_app/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_bypass/ffmpeg_bypass_app/ten_packages/extension/ffmpeg_client/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_1/graph_env_var_1_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_1/graph_env_var_1_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_2/graph_env_var_2_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_2/graph_env_var_2_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_3/graph_env_var_3_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_3/graph_env_var_3_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_4/graph_env_var_4_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_4/graph_env_var_4_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/hello_world/hello_world_app/: manifest.json
tests/ten_runtime/integration/cpp/hello_world/hello_world_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/import_graph/import_graph_app/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check/interface_schema_check_app/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check/interface_schema_check_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check_2/interface_schema_check_2_app/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check_2/interface_schema_check_2_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/large_result/large_result_app/: manifest.json
tests/ten_runtime/integration/cpp/large_result/large_result_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/long_running/long_running_app/: manifest.json
tests/ten_runtime/integration/cpp/long_running/long_running_app/ten_packages/extension/extension_1/: manifest.json
tests/ten_runtime/integration/cpp/long_running/long_running_app/ten_packages/extension/extension_2/: manifest.json
tests/ten_runtime/integration/cpp/metadata_additional_field/metadata_additional_field_app/: manifest.json
tests/ten_runtime/integration/cpp/metadata_additional_field/metadata_additional_field_app/ten_packages/extension/default_extension_cpp/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_1/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_1/ten_packages/extension/ext_a/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_1/ten_packages/extension/ext_b/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_2/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_2/ten_packages/extension/ext_c/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_2/ten_packages/extension/ext_d/: manifest.json
tests/ten_runtime/integration/cpp/restful/restful_app/: manifest.json
tests/ten_runtime/integration/cpp/standalone_test_cpp/ext/: manifest.json
tests/ten_runtime/integration/cpp/standalone_webrtc_vad_cpp/: BUILD.gn  test_case.py
tools/tgn/: install_tgn.sh
tools/tman/: install_tman.sh  upload-to-ppa.sh
tools/version/: common.py  update_version_in_ten_framework.py
tools/winget/: manifest.installer.yaml.template  manifest.locale.en-US.yaml.template  manifest.locale.ja-JP.yaml.template  manifest.locale.ko-KR.yaml.template  manifest.locale.zh-CN.yaml.template  manifest.locale.zh-TW.yaml.template  manifest.version.yaml.template  submit-to-winget.ps1
(+742 files in other folders)
